GsApp: Avoid crashing on kind changes on "core" apps

Handle newly added GS_APP_KIND_CORE enum in gs_app_set_kind. It doesn't
make sense for these to change their kind, but instead of crashing just
log a warning.

https://bugzilla.gnome.org/show_bug.cgi?id=736362