src/gs-app.c
@@ -543,6 +543,7 @@ gs_app_set_kind (GsApp *app, GsAppKind kind)
 		break;
 	case GS_APP_KIND_SYSTEM:
 	case GS_APP_KIND_OS_UPDATE:
+	case GS_APP_KIND_CORE:
 	case GS_APP_KIND_SOURCE:
 	case GS_APP_KIND_MISSING:
 		/* this can never change state */
